--- a/criptoactivos.html
+++ b/criptoactivos.html
@@ -29,20 +29,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link bi bi-people-fill" href="/"> Nosotros</a>
+                        <a class="nav-link bi bi-people-fill" href="index.html"> Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active bi bi-currency-bitcoin" aria-current="page" href="/criptoactivos.html"> Criptoactivos</a>
+                        <a class="nav-link active bi bi-currency-bitcoin" aria-current="page" href="criptoactivos.html"> Criptoactivos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link bi bi-arrows-angle-contract" href="/convertidor.html"> Convertidor</a>
+                        <a class="nav-link bi bi-arrows-angle-contract" href="convertidor.html"> Convertidor</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <header class="w-100">
-        <img class="img-fluid" src="assets/bitcoin-banner2.jpg" alt="Bitcoin digital background">
+        <img class="img-fluid" src="assets/bitcoin-banner2compressed.jpg" alt="Bitcoin digital background">
     </header>
     <p>Powered by <a href="https://coinstats.app/coins/apis/">Coinstats</a></p>
     <div class="container-fluid d-flex flex-wrap justify-content-evenly mt-2" id="criptoactivo-list">
