--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active bi bi-people-fill" aria-current="page" href="#"> Nosotros</a>
+                        <a class="nav-link active bi bi-people-fill" aria-current="page" href="index.html"> Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link bi bi-currency-bitcoin" href="/criptoactivos.html"> Criptoactivos</a>
+                        <a class="nav-link bi bi-currency-bitcoin" href="criptoactivos.html"> Criptoactivos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link bi bi-arrows-angle-contract" href="/convertidor.html"> Convertidor</a>
+                        <a class="nav-link bi bi-arrows-angle-contract" href="convertidor.html"> Convertidor</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <header class="w-100">
-        <img class="img-fluid" src="assets/bitcoin-banner2.jpg" alt="Bitcoin digital background">
+        <img class="img-fluid" src="assets/bitcoin-banner2compressed.jpg" alt="Bitcoin digital background">
     </header>
 
     <div class="container-fluid mt-5">
