--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                     <ol class="list-group list-group-numbered">
                         <li class="list-group-item">Descripciones generales de los distintos criptoactivos</li>
                         <li class="list-group-item">Información actualizada sobre los precios de los criptoactivos más importantes</li>
-                        <li class="list-group-item">Opiniones de expertos en el tema</li>
                         <li class="list-group-item">Una página bonita hecha en Bootstrap</li>
                     </ol>
                 </div>
@@ -81,10 +80,9 @@
                 </div>
                 <div id="noofrecemos" class="accordion-collapse collapse px-1 py-2">
                     <ol class="list-group list-group-numbered">
-                        <li class="list-group-item">Descripciones generales de los distintos criptoactivos</li>
-                        <li class="list-group-item">Información actualizada sobre los precios de los criptoactivos más importantes</li>
-                        <li class="list-group-item">Opiniones de expertos en el tema</li>
-                        <li class="list-group-item">Una página bonita hecha en Bootstrap</li>
+                        <li class="list-group-item">Consultas financieras</li>
+                        <li class="list-group-item">Una API propia</li>
+                        <li class="list-group-item">Promoción de algún activo u organización en particular</li>
                     </ol>
                 </div>
             </div>
