--- a/criptoactivos.html
+++ b/criptoactivos.html
@@ -41,6 +41,18 @@
             </div>
         </div>
     </nav>
+    <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center position-relative align-items-center w-100">
+        <div class="toast position-absolute" role="alert" aria-live="assertive" id="errorToast" aria-atomic="true">
+            <div class="toast-header">
+                <img src="assets/currency-bitcoin.svg" class="rounded me-2" alt="Bitcoin symbol">
+                <strong class="me-auto">Error</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                No se pudo cargar los resultados, inténtelo más tarde
+            </div>
+        </div>
+    </div>
     <header class="w-100">
         <img class="img-fluid" src="assets/bitcoin-banner2compressed.jpg" alt="Bitcoin digital background">
     </header>
